expected/main/core/structs/structs3a.err
ERROR: "actual/main/core/structs/structs3a.lc", line 6
struct S1/16
^
Size of z is 16 more than expected

ERROR: Aborting after previously reported error

